--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -171,6 +171,8 @@
 \hypersetup{pageanchor=true}
 
 %--- Begin generated contents ---
+\chapter{$<$a href=\char`\"{}https\+://docs.\+google.\+com/document/d/1\+MXNOa\+Wo\+TIx\+ODs8\+Lz\+Auq\+IOLq4j4mkw4\+Zwe\+VLvb\+Je6\+XKs/edit\char`\"{}$>$iml$<$/a$>$}
+\label{index}\hypertarget{index}{}\input{index}
 \chapter{Namespace Index}
 \input{namespaces}
 \chapter{Hierarchical Index}
@@ -219,6 +221,7 @@
 \input{lexer__result_8h}
 \input{token_8h}
 \input{token__type_8h}
+\input{README_8md}
 %--- End generated contents ---
 
 % Index
