--- a/docs/latex/classiml_1_1parser__result.tex
+++ b/docs/latex/classiml_1_1parser__result.tex
@@ -19,7 +19,9 @@ User handle.
 void \mbox{\hyperlink{classiml_1_1parser__result_af6df1f238a4bb7cf02c9abf23de459ac}{visualize}} (const char $\ast$=\char`\"{}iml\+\_\+tree.\+dot\char`\"{})
 \begin{DoxyCompactList}\small\item\em Visualizes the tree by calling the root visualize method. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classiml_1_1parser__result_afc66faebb092603c55a46d36c8cc46a5}{evaluate}} (const char $\ast$=\char`\"{}iml\+\_\+result.\+imlr\char`\"{})
-\begin{DoxyCompactList}\small\item\em Evaluates the tree by calling the root evaluate method. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Evaluates the tree by calling the root evaluate method. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{classiml_1_1parser__result_a1c1d0a909b2438befd00d96a2b0862a3}{save}} (const char $\ast$=\char`\"{}iml\+\_\+save\+\_\+file.\+iml\char`\"{})
+\begin{DoxyCompactList}\small\item\em Save the tree into an iml file. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
@@ -61,6 +63,16 @@ Destroys the tree.
 
 
 Evaluates the tree by calling the root evaluate method. 
+
+\mbox{\Hypertarget{classiml_1_1parser__result_a1c1d0a909b2438befd00d96a2b0862a3}\label{classiml_1_1parser__result_a1c1d0a909b2438befd00d96a2b0862a3}} 
+\index{iml::parser\_result@{iml::parser\_result}!save@{save}}
+\index{save@{save}!iml::parser\_result@{iml::parser\_result}}
+\doxysubsubsection{\texorpdfstring{save()}{save()}}
+{\footnotesize\ttfamily void iml\+::parser\+\_\+result\+::save (\begin{DoxyParamCaption}\item[{const char $\ast$}]{ = {\ttfamily \char`\"{}iml\+\_\+save\+\_\+file.iml\char`\"{}} }\end{DoxyParamCaption})}
+
+
+
+Save the tree into an iml file. 
 
 \mbox{\Hypertarget{classiml_1_1parser__result_af6df1f238a4bb7cf02c9abf23de459ac}\label{classiml_1_1parser__result_af6df1f238a4bb7cf02c9abf23de459ac}} 
 \index{iml::parser\_result@{iml::parser\_result}!visualize@{visualize}}
