--- a/docs/latex/index.tex
+++ b/docs/latex/index.tex
@@ -34,4 +34,4 @@ Simply install the library and add the interpreter (parser) header file in your 
 
 \end{DoxyCode}
 \hypertarget{index_autotoc_md8}{}\doxysubsection{Installation}\label{index_autotoc_md8}
-\href{https://github.com/Stuksi/iml/releases/download/v1.0.1/iml.zip}{\texttt{ Version 1.\+0.\+1}} 
+\href{https://github.com/Stuksi/iml/releases/download/v1.1/v1.1.zip}{\texttt{ Version 1.\+1}} 
